--- a/app/sass/blocks/btn-open/_btn-open.scss
+++ b/app/sass/blocks/btn-open/_btn-open.scss
@@ -2,7 +2,7 @@
 .btn-open {
     display: inline-block;
     padding: 10px 16px 10px 16px;
-    border: 2.5px solid $c-light;
+    border: 3px solid $c-light; //2.5px
     border-radius: 50%;
     transition: 0.5s;
     cursor: pointer;
