--- a/app/sass/blocks/form/_form.scss
+++ b/app/sass/blocks/form/_form.scss
@@ -128,7 +128,7 @@
             //медиа-запрос смартфон
             @media (max-width: $bp-smartphone ) {
                 width: 18px;    
-                top: 8px;
+                top: 8px; 
             }
 
             //медиа-запрос смартфон маленький экран
@@ -144,7 +144,6 @@
         @media (max-width: $bp-netbook ) {
             height: 19px;
             left: 19px;
-            //added up
             top: 10px; 
         }
 
@@ -152,7 +151,7 @@
         @media (max-width: $bp-smartphone ){
             height: 18px;
             left: 17px;
-            top: 8px;
+            top: 9px; 
         }
 
         //медиа-запрос смартфон маленький экран
@@ -299,6 +298,8 @@
         @media (max-width: $bp-smartphone) {
             top: 17%;
             font-size: 0.72rem;
+          
+            
         }
 
         //медиа-запрос смартфон маленький экран
@@ -352,4 +353,18 @@
         padding: 6.4% 2% 6.4% 2%;
         width: 80%;
     }    
+}
+
+ //Немного магии. Сайт преподносит информацию на английском языке.
+ //Если пользователь просматривает сайт с помощью браузера Chrome
+ //и захочет перевести содержимое на русский язык при помощи Google Translate
+ //то текста в в форме обратной связи станет больше и соответственно tooltip
+ //(подсказка) станет отображаться выше что не очень удобно при просмотре с
+ //смартфона, поэтому если страница на русском языке я подсказку немного опускаю
+.translated-ltr {
+    @media (max-width: $bp-smartphone){
+        .form {
+            &__tooltip { top: 24%; }
+        }
+    }
 }
